# zeknox

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  FAQ.md  LICENSE  README.md  build.rs  build_gmp.sh  go.mod  go.sum  main.cpp  run_rust_tests.sh
.github/: cmake.yml
.github/workflows/: cmake.yml
benches/: cpu_fft.rs  gpu_fft.rs  gpu_fft_batch.rs  lde_batch.rs  transpose.rs
cmake/: platform.cmake
cpp/: CMakeLists.txt  bench_bn128.cpp  bench_bn254.cpp  bn128_bench.cpp  example.cpp  test_bn128.cpp  test_bn254.cpp  test_gl64.cpp
cpp/field/: fq.hpp  fr.cpp  fr.hpp
cuda/: CMakeLists.txt  Makefile  README.md  build-debug.sh  configure.sh  lib.cu  lib.h
cuda/arithmetic/: arithmetic.hpp  bn128.cu  bn254.cu  gl64.cu
cuda/ec/: jacobian_t.hpp  xyzz_t.hpp
cuda/ff/: alt_bn128.hpp  alt_bn254.hpp  arithmatic.cuh  bn254_params.cuh  gl64_t.cuh  goldilocks.hpp  mont_t.cuh
cuda/keccak/: Makefile  README.md  keccak-tiny.h  keccak.c  keccak.cu  keccak.cuh  keccak.h  keccak.hpp  keccak_sha3.cu  keccak_sha3.cuh  test_keccak.c
cuda/merkle/: CudaArch.mk  Makefile  configure.sh  goldilocks_base_field.hpp  goldilocks_base_field_avx.hpp  goldilocks_base_field_scalar.hpp  hasher.hpp  merkle.c  merkle.cpp  merkle.cu  merkle.h  merkle_c.h  merkle_private.h  run-benchmark.sh
cuda/monolith/: Makefile  monolith.cu  monolith.cuh  monolith.h  monolith.hpp  test_monolith.cu
cuda/msm/: pippenger.cuh  pippenger.hpp  sort.cuh
cuda/ntt/: gen_twiddles.cu  kernels.cu  ntt.cuh  ntt.h  parameters.cuh
cuda/poseidon/: Makefile  cgbn_common.cuh  element.cu  element.cuh  element_bn128.cu  element_bn128.cuh  element_cgbn.cuh  gl64_t.cuh  goldilocks.cuh  goldilocks.hpp  poseidon.cpp  poseidon.cu  poseidon.cuh  poseidon.h  poseidon.hpp  poseidon_bn128.cu  poseidon_bn128.h  poseidon_bn128.hpp  poseidon_bn128_constants.h  poseidon_permutation.cuh  poseidon_permutation.hpp  test.cpp  test_leaves.h  test_poseidon.cpp  test_poseidon.cu  types.h
cuda/poseidon2/: Makefile  poseidon2.cu  poseidon2.cuh  poseidon2.h  poseidon2.hpp  poseidon2_constants.hpp  test_poseidon2.cu
cuda/primitives/: affine.cuh  extension_field.cuh  field.cuh  projective.cuh
cuda/tests/: tests.cu
cuda/types/: babybear.hpp  bb31_t.cuh  gl64_t.cuh  goldilocks.hpp  int_types.h  monty.hpp  monty31.hpp
cuda/util/: all_gpus.cpp  batch_mul.cu  batch_mul.cuh  cuda_available.hpp  cuda_utils.cuh  exception.cuh  exception.hpp  gpu_t.cuh  host_math.cuh  ptx.cuh  rusterror.h  sharedmem.cuh  slice_t.hpp  storage.cuh  thread_pool_t.hpp
cuda/utils/: all_gpus.cpp  batch_mul.cuh  cuda_available.hpp  cuda_utils.cuh  device_context.cuh  exception.cuh  exception.hpp  rusterror.h
docs/: cmake.md  nvcc.md  vscode.md
docs/nvidia/: cuda_runtime.md  data_transfer.md  device_memory.md  nvlink.md  profile.md
docs/work.log/: todo.md
examples/: check_gpu.rs  compare.rs  data_trans.rs  ntt_batch.rs  ntt_concurrent.rs  ntt_single.rs  rust_alloc.rs
hip/keccak/: Makefile  keccak.h  keccak.hip  keccak_cpu.c  keccak_cpu.h  test_keccak.c  test_keccak_hip.hip
hip/util/: hip_utils.hip
native/: CMakeLists.txt  README.md  build-debug-msm-bn254.sh  build-debug.sh  build-release-gl64.sh  build-release-msm-bn254.sh  build-release.sh  lib.cu  lib.h
native/ec/: jacobian_t.hpp  xyzz_t.hpp
native/ff/: alt_bn254.hpp  bn254_params.cuh  gl64_params.hpp  gl64_t.cuh  goldilocks.hpp  mont_t.cuh
native/keccak/: README.md  keccak.cu  keccak.hpp
native/merkle/: hasher.hpp  merkle.cpp  merkle.cu  merkle.h  merkle_avx.cpp  run-benchmark.sh
native/monolith/: monolith.cu  monolith.hpp
native/msm/: batch_addition.cuh  msm.cu  msm.h  pippenger.cuh  pippenger.hpp  sort.cu  sort.cuh
native/ntt/: kernels.cu  ntt.cu  ntt.cuh  ntt.h
native/poseidon/: element_bn128.cu  element_bn128.cuh  goldilocks.hpp  poseidon.cpp  poseidon.cu  poseidon.hpp  poseidon_bn128.cu  poseidon_bn128.hpp  poseidon_bn128_constants.h  poseidon_permutation.cuh  poseidon_permutation.hpp
native/poseidon2/: poseidon2.cu  poseidon2.hpp
native/primitives/: affine.cuh  extension_field.cuh  field.cuh  projective.cuh
native/secp256k1/: Makefile  ecdsa.c  ecdsa.h  ecdsa_gpu.cu  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_gen.h  ecmult_gen_impl.h  ecmult_impl.h  field.h  field_10x26_impl.h  field_5x52_impl.h  field_impl.h  group.h  group_impl.h  hash.h  hash_impl.h  hsort.h  hsort_impl.h  int128.h  modinv32.h  modinv32_impl.h  modinv64.h  modinv64_impl.h  precomputed_ecmult.c  precomputed_ecmult.cu  precomputed_ecmult.h  precomputed_ecmult_gen.c  precomputed_ecmult_gen.cu  precomputed_ecmult_gen.h  scalar.h  scalar_4x64_impl.h  scalar_8x32_impl.h  scalar_impl.h  scratch.h  scratch_impl.h  secp256k1.c  secp256k1.cu  (+2 more)
native/tests/: tests.cu
native/types/: cuda_uint128.cuh  gl64_t.cuh  int_types.h
native/utils/: all_gpus.cpp  all_gpus.cu  all_gpus.hpp  batch_mul.cu  batch_mul.cuh  cuda_available.hpp  cuda_utils.cuh  device_context.cuh  exception.cuh  exception.hpp  gpu_t.cuh  host_math.cuh  pow.hpp  ptx.cuh  rusterror.h  sharedmem.cuh  slice_t.hpp  storage.cuh  thread_pool_t.hpp  vec2d_t.hpp
scripts/: README.md  arithmetic.py  check-header.sh  check-headers.sh  copy_right.sh  crypto_primitives.py  curve_parameters.py  fft.py  gen_field_params.py  new_curve_script.py  plot.py
src/: error.rs  lib.cu  lib.h  lib.rs  types.rs
tests/: bn128_arithmetic.rs  device.rs  goldilocks_arithmetic.rs  gpu.rs  ntt.rs  utils.rs
wrappers/cpp/: CMakeLists.txt  README.md  bench_bn254.cpp  bench_msm.cu  build_dep.sh  build_gmp.sh  test_bn254.cpp  test_gl64.cpp
wrappers/cpp/depends/ffiasm/: fft.cpp
wrappers/cpp/field/: fq.cpp  fr.hpp
wrappers/rust/: Cargo.toml  README.md  build.rs  run_rust_tests.sh
wrappers/rust/benches/: cpu_fft.rs  gpu_fft.rs  gpu_fft_batch.rs  lde_batch.rs  transpose.rs
wrappers/rust/examples/: check_gpu.rs  ntt_batch.rs  ntt_concurrent.rs  ntt_single.rs
wrappers/rust/src/: error.rs  lib.rs  types.rs
wrappers/rust/src/device/: bindings.rs  error.rs  memory.rs  mod.rs  stream.rs
wrappers/rust/tests/: device.rs  gpu.rs  merkle_tree.rs  ntt.rs  utils.rs
(+34 files in other folders)
