[package]
name = "cryptography_cuda"
version = "0.1.0"
edition = "2021"
authors = [ "" ]
description = "An implementation of cryptography using cuda"
homepage = ""
repository = "https://github.com/okx/cryptography_cuda.git"
links = "cryptography_cuda"
include = [
    "/Cargo.toml",
    "/build.rs",
    "/src/**",
    "/cryptography_cuda/cuda/**",
]

[[bench]]
name = "gpu_fft"
harness = false

[[bench]]
name = "cpu_fft"
harness = false

[[bench]]
name = "gpu_fft_batch"
harness = false

[dependencies] 
blst = "~0.3.11"
bitflags = "1.3"

[dev-dependencies]
rand = "*"
plonky2_field = {git="https://github.com/okx/plonky2.git"}
criterion = "*"
rayon = "1.8.1"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"
cmake = "*"
bindgen = "*"
libc = "*" #TODO: move libc dependencies to build 
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

[features]
default = []
gl64 = []
bn254 = []
no_cuda=[]