[package]
name = "cryptography_cuda"
version = "0.1.0"
edition = "2021"
authors = [ "" ]
description = "An implementation of cryptography using cuda"
homepage = ""
repository = "https://github.com/okx/cryptography_cuda.git"
links = "cryptography_cuda"
include = [
    "/Cargo.toml",
    "/build.rs",
    "/src/**",
    "/cryptography_cuda/native/**",
]

[[bench]]
name = "gpu_fft"
harness = false

[[bench]]
name = "cpu_fft"
harness = false

[[bench]]
name = "gpu_fft_batch"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "lde_batch"
harness = false

[dependencies]
blst = "~0.3.11"
bitflags = "1.3"
bit_reverse = "=0.1.1"


[dev-dependencies]
rand = "*"
criterion = "*"
rayon = "1.8.1"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
plonky2_field = {git="https://github.com/0xPolygonZero/plonky2.git", rev="80386f3bdb83dc5387e68873b33549fbc871a4fa"}

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"
cmake = "*"
bindgen = "0.69.4"
libc = "*" #TODO: move libc dependencies to build
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

[features]
default = ["cuda"]
gl64 = []
bn254 = []
no_cuda = []
cuda = []
