[package]
name = "cryptography_cuda"
version = "0.1.0"
edition = "2021"
authors = [ "" ]
description = "An implementation of cryptography using cuda"
homepage = ""
repository = "https://github.com/okx/cryptography_cuda.git"
links = "cryptography_cuda"
include = [
    "/Cargo.toml",
    "/build.rs",
    "/src/**",
    "/cryptography_cuda/native/**",
]

[[bench]]
name = "gpu_fft"
harness = false

[[bench]]
name = "cpu_fft"
harness = false

[[bench]]
name = "gpu_fft_batch"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "lde_batch"
harness = false

[dependencies]
blst = "~0.3.11"
bitflags = "1.3"
bit_reverse = "=0.1.1"


[dev-dependencies]
rand = "*"
criterion = "*"
rayon = "1.8.1"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
plonky2 = {git="https://github.com/okx/plonky2.git", rev="9a917ba27c26aca6d0e5d9760e8575cd5fc8dd0a"}
plonky2_field = {git="https://github.com/okx/plonky2.git", rev="9a917ba27c26aca6d0e5d9760e8575cd5fc8dd0a"}

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"
cmake = "*"
bindgen = "0.69.4"
libc = "*" #TODO: move libc dependencies to build
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

[features]
default = ["cuda"]
gl64 = []
bn254 = []
no_cuda = []
cuda = []
