[package]
name = "zeknox_p2"
version = "1.0.0"
edition = "2021"
authors = ["OKX"]
description = "ZEro KNOwledge Xcelerated (accelerated ZKP) compatible with 0xPolygonZero/plonky2"
homepage = "https://github.com/okx/zeknox.git"
repository = "https://github.com/okx/zeknox.git"
links = "zeknox"
license = "Apache-2.0"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/build.rs",
    "/src/**",
]

[[bench]]
name = "gpu_fft_batch"
harness = false

[[bench]]
name = "transpose"
harness = false

[[bench]]
name = "lde_batch"
harness = false

[dependencies]
blst = "~0.3.11"
bitflags = "1.3"
bit_reverse = "=0.1.1"


[dev-dependencies]
rand = "*"
criterion = "*"
rayon = "1.8.1"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
plonky2 = "1.0.2"
plonky2_field = "1.0.0"


[build-dependencies]
cc = "^1.0.70"
which = "^4.0"
cmake = "*"
bindgen = "0.69.4"
libc = "*" #TODO: move libc dependencies to build
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

[features]
default = ["cuda"]
gl64 = []
bn254 = []
no_cuda = []
cuda = []
